@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -55,6 +55,8 @@ import java.util.Map;
 
 import com.sun.mail.util.PropUtil;
 import com.sun.mail.util.MailLogger;
+import com.sun.mail.util.SocketConnectException;
+import com.sun.mail.util.MailConnectException;
 
 /**
  * A POP3 Message Store.  Contains only one folder, "INBOX".
@@ -205,6 +207,8 @@ public class POP3Store extends Store {
 	    port = getPort(null);
 	} catch (EOFException eex) { 
 		throw new AuthenticationFailedException(eex.getMessage());
+	} catch (SocketConnectException scex) {
+	    throw new MailConnectException(scex);
 	} catch (IOException ioex) { 
 	    throw new MessagingException("Connect failed", ioex);
 	}
