@@ -38,6 +38,7 @@ K  5819	enable RFC 2231 support by default
 K  5829	NullPointerException when accessing the content of a message attachment
 K  5830	IMAPProtocol.sasllogin uses old constructor for IMAPSaslAuthenticator
 K  5847	Exception when parsing bad address with unclosed quote in mail header
+K  5861	when failing to connect to a server, provide more detail in exception
 
 
 		  CHANGES IN THE 1.4.7 RELEASE
